--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "codemirror": "^5.65.16",
     "cross-spawn": "^7.0.3",
+    "firebase": "^10.13.1",
     "react": "^18.3.1",
     "react-codemirror2": "^8.0.0",
     "react-dom": "^18.3.1",
